--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,4 @@
 .NavBarItems {
-  background: rgb(2, 0, 36);
   background: linear-gradient(
     90deg,
     rgba(2, 0, 36, 1) 0%,
@@ -7,74 +6,37 @@
     rgba(0, 212, 255, 1) 100%
   );
   height: 80px;
-}
-
-.navbar {
-  background-color: #242424;
-  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
-  top: 0;
-  z-index: 999;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80px;
-  max-width: 1500px;
-}
-
-.navbar-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
 }
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(5, auto);
   grid-gap: 10px;
   list-style: none;
   text-align: center;
-  width: 60vw;
+  width: 70vw;
   justify-content: end;
   margin-right: 2rem;
 }
 
-.nav-item {
-  height: 80px;
-}
-
 .nav-links {
-  color: #fff;
-  display: flex;
-  align-items: center;
+  color: white;
   text-decoration: none;
   padding: 0.5rem 1rem;
-  height: 100%;
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
+  background-color: tomato;
+  border-radius: 4px;
   transition: all 0.2s ease-out;
 }
 
 .fa-bars {
-  color: #fff;
-}
-
-.nav-links-mobile {
-  display: none;
+  color: white;
 }
 
 .menu-icon {
@@ -82,27 +44,25 @@
 }
 
 @media screen and (max-width: 960px) {
-  .NavbarItems {
+  .NavBarItems {
     position: relative;
   }
-
-  .nav-menu {
+  .Nav-menu {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: 500px;
     position: absolute;
     top: 80px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
   }
-
-  .nav-menu.active {
-    background: #242222;
+  .Nav-menu.active {
+    background-color: blueviolet;
     left: 0;
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.5 ease;
     z-index: 1;
   }
 
@@ -114,8 +74,7 @@
   }
 
   .nav-links:hover {
-    background-color: #fff;
-    color: #242424;
+    background-color: tomato;
     border-radius: 0;
   }
 
@@ -136,24 +95,21 @@
     cursor: pointer;
   }
 
+  .fa-times {
+    color: white;
+    font-size: 2rem;
+  }
+
   .nav-links-mobile {
     display: block;
     text-align: center;
+    padding: 1.5rem;
     margin: 2rem auto;
     border-radius: 4px;
     width: 80%;
+    background: cornflowerblue;
     text-decoration: none;
+    color: white;
     font-size: 1.5rem;
-    background-color: transparent;
-    color: #fff;
-    padding: 14px 20px;
-    border: 1px solid #fff;
-    transition: all 0.3s ease-out;
-  }
-
-  .nav-links-mobile:hover {
-    background: #fff;
-    color: #242424;
-    transition: 250ms;
   }
 }
